--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             </nav>
         </div>
     </section>
-    <header>
+
+
+    <header class="text-center text-white">
         <h3 class="subtitle text-center special-header">
             Velkommen til
         </h3>
@@ -81,11 +83,28 @@
             <h1>San Marino <br>Deep Dish</h1>
         </div>
         <div>
-            <p style="color: #ffffff;text-align: center;">With a more “contemporary” style, our gourmet pizzas are where
+            <p class="mx-auto">With a more “contemporary” style, our gourmet pizzas are where
                 the creativity of our pizza chefs shines.</p>
             </div>
-            <div style="color: #ffffff;text-align: center;">START MY ORDER NOW</div>
+            <div class="d-flex justify-content-center">
+                <a href="" class="btn custom-btn" >Restaurant 1</a>
+                <a href="" class="btn custom-btn" >Restaurant 1</a>
+            </div>
         </header>
+
+        <section class="c-locations">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-3 text-center">
+                    <img class="img-fluid" src="images/tomato.jpg" alt="">
+                </div>
+                <div class="col-md-6 middle">
+                    DDDD
+                </div>
+                <div class="col-md-3 text-center">
+                    <img class="img-fluid" src="images/basil.jpg" alt="">
+                </div>
+            </div>
+        </section>
         
         
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
