--- a/index.html
+++ b/index.html
@@ -102,30 +102,33 @@
                         <h3><strong>2 SANMARINO LOCATIONS</strong></h3>
                         <p class="mx-auto my-4">We have dine-in restaurants and carryout and delivery only locations, so before you settle on a location, make sure they accommodate what you’re looking for!</p>
                     </div>
-                    <div class="btns-group d-flex justify-content-center">
-                        <a class="btn" href="">Dine-in Hours</a>
-                        <a class="btn" href="">Delivery Hours</a>
-                    </div>
                     <nav>
-                        <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
-                            <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
+                        <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
+                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Restaurant 1 </a>
+                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Restaurant 2</a>
                         </div>
                     </nav>
-                    <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-content d-flex justify-content-center" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card">
                                 <img src="images/rest1.jpg" class="card-img-top" alt="...">
                                 <div class="card-body text-dark">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Restaurant Name</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <a href="#" class="btn custom-btn">Go to restaurant</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
-                        <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+                        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                            <div class="card">
+                                <img src="images/rest1.jpg" class="card-img-top" alt="...">
+                                <div class="card-body text-dark">
+                                    <h5 class="card-title">Restaurant Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="#" class="btn custom-btn">Go to restaurant</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
