--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
         </section>
         <section>
             <div class="container text-center">
-                <img src="images/pizza-heart.png" alt="">
+                <img class="img-fluid" src="images/pizza-heart.png" alt="">
             </div>
         </section>
 
         <footer>
             <div class="container">
                 <div class="" id="navbarSupportedContent">
-                    <ul class="">
+                    <ul class="d-flex flex-lg-row flex-column align-items-center justify-content-center">
                         <li class="">
                             <a class="" href="#"><i class="fas fa-hotel"></i> Home</span><span class="sr-only">(current)</span></a>
                         </li>
@@ -161,9 +161,13 @@
                         </li>
                     </ul>
                 </div>
-                <div>
-                    <i class="fab fa-facebook-square"></i>
-                    <div class="author_credits"><a href="#">Lafka theme by theAlThemist  | © 2021 All rights reserved!</a></div>
+                <div class="d-flex flex-lg-row flex-column align-items-center justify-content-center author_credits">
+                    <div>
+                        <a href=""><i class="fab fa-facebook-f"></i></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        
+                    </div>
+                    <div class=""><a href="#">Lafka theme by theAlThemist  | © 2021 All rights reserved!</a></div>
                 </div>
             </div>
         </footer>
