--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
         <h3 class="subtitle text-center special-header">
             Velkommen til
         </h3>
-        <div class="p-4 text-center  special-header" style="font-weight: 700;">
+        <div class="py-4 text-center  special-header" style="font-weight: 700;">
             <h1>San Marino <br>Deep Dish</h1>
         </div>
         <div>
             <p class="mx-auto">With a more “contemporary” style, our gourmet pizzas are where
                 the creativity of our pizza chefs shines.</p>
             </div>
-            <div class="d-flex justify-content-center">
+            <div class="d-lg-flex justify-content-center restaurant-btns">
                 <a href="" class="btn custom-btn" >Restaurant 1</a>
                 <a href="" class="btn custom-btn" >Restaurant 1</a>
             </div>
@@ -167,7 +167,7 @@
                         <a href=""><i class="fab fa-instagram"></i></a>
                         
                     </div>
-                    <div class=""><a href="#">Lafka theme by theAlThemist  | © 2021 All rights reserved!</a></div>
+                    <div class="text-center"><a href="#">Lafka theme by theAlThemist  | © 2021 All rights reserved!</a></div>
                 </div>
             </div>
         </footer>
