--- a/index.html
+++ b/index.html
@@ -136,7 +136,16 @@
                 </div>
             </div>
         </section>
-        <section>
+
+        <section class="pizza-crust">
+            <div class="container">
+                <div class="py-4 text-center  special-header" style="font-weight: 700;">
+                    <h1>In pizza <br>We crust</h1>
+                </div>
+            </div>
+        </section>
+
+        <section class="pizza-heart">
             <div class="container text-center">
                 <img class="img-fluid" src="images/pizza-heart.png" alt="">
             </div>
