--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <h3><strong>2 SANMARINO LOCATIONS</strong></h3>
                         <p class="mx-auto my-4">We have dine-in restaurants and carryout and delivery only locations, so before you settle on a location, make sure they accommodate what you’re looking for!</p>
                     </div>
-                    <nav>
+                    <!-- <nav>
                         <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
                             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Restaurant 1 </a>
                             <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Restaurant 2</a>
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-3 text-center">
                     <img class="img-fluid" src="images/basil.jpg" alt="">
