--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="custome-home-style.css">
 </head>
 <body>
-    
+<div class="custom-home">
     <section class="subheader">
         <div class="container">
             <div class="row align-items-center">
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </footer>
-        
+</div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
